# termin-graphics

./: .gitignore  CMakeLists.txt  build.sh  install.sh  runtests.sh  setup.py
cmake/: termin_graphicsConfig.cmake.in
include/tgfx/: frame_graph_resource.hpp  graphics_backend.hpp  handles.hpp  tc_gpu_context.h  tc_handle.h  tc_pool.h  tc_registry_utils.h  tgfx_gpu_ops.h  tgfx_log.h  tgfx_log.hpp  tgfx_resource_gpu.h  tgfx_shader_handle.hpp  tgfx_texture_handle.hpp
include/tgfx/opengl/: opengl_backend.hpp  opengl_framebuffer.hpp  opengl_shader.hpp  opengl_texture.hpp  opengl_uniform_buffer.hpp
include/tgfx/resources/: tc_texture_registry.h
python/: CMakeLists.txt
python/bindings/: graphics_bindings.cpp  log_bindings.cpp  mesh_bindings.cpp  shader_bindings.cpp  texture_bindings.cpp  tgfx_module.cpp
python/tgfx/: __init__.py  window.py
python/tgfx/include/glad/: glad.h
python/tgfx/include/tgfx/: graphics_backend.hpp  render_state.hpp  tc_gpu_share_group.h  tc_resource_map.h  tgfx_gpu_ops.h  tgfx_intern_string.h  tgfx_mesh_handle.hpp  tgfx_shader_handle.hpp  types.hpp
python/tgfx/include/tgfx/opengl/: opengl_mesh.hpp  opengl_uniform_buffer.hpp
python/tgfx/include/tgfx/resources/: tc_material.h  tc_material_registry.h  tc_mesh.h  tc_shader.h  tc_shader_registry.h  tc_texture.h
src/: tc_gpu_context.c  tc_gpu_share_group.c  tc_pool.c  tc_resource_map.c  tgfx_gpu_ops.c  tgfx_intern_string.c  tgfx_log.c  tgfx_resource_gpu.c  tgfx_texture_handle.cpp
src/opengl/: opengl_backend.cpp  opengl_backend_singleton.cpp  opengl_framebuffer.cpp
src/resources/: tc_material_registry.c  tc_mesh.c  tc_mesh_registry.c  tc_shader_registry.c  tc_texture_registry.c
tests/: main.cpp  tests_log.cpp  tests_vertex_layout.cpp
tests/guard/: guard.h
third/glad/src/: glad.c
